--- a/.gitignore
+++ b/.gitignore
@@ -62,11 +62,7 @@ typings/
 
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 .history
 
 dist
