--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
     "webpack": "^4.20.2",
     "webpack-stream": "^5.1.1",
     "yargs": "^12.0.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.0",
+    "normalize.css": "^8.0.1",
+    "primer-core": "^7.0.0"
   }
 }
