--- a/package.json
+++ b/package.json
@@ -38,9 +38,6 @@
     "yargs": "^12.0.2"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.0",
-    "normalize.css": "^8.0.1",
-    "primer-core": "^7.0.0"
+    "normalize.css": "^8.0.1"
   }
 }
